// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainMenuIcon should be rendered correctly 1`] = `
<button
  className="container uui-button-box uui-enabled root icon-color-gray60 container"
  href={null}
  onClick={[Function]}
  role="button"
  tabIndex={-1}
>
  <div
    className="container uui-icon uui-enabled"
    style={Object {}}
  >
    <svg
      className=""
      height={24}
      viewBox="0 0 12 24"
      width={12}
    >
      <use
        xlinkHref="#calendar-18.svg"
      />
    </svg>
  </div>
</button>
`;

exports[`MainMenuIcon should be rendered correctly 2`] = `
<a
  className="container uui-button-box uui-enabled -clickable root icon-color-gray60 container"
  onClick={[Function]}
  role="link"
  tabIndex={-1}
  target="_blank"
>
  <div
    className="container uui-icon uui-enabled"
    style={Object {}}
  >
    <svg
      className=""
      height={24}
      viewBox="0 0 12 24"
      width={12}
    >
      <use
        xlinkHref="#calendar-18.svg"
      />
    </svg>
  </div>
</a>
`;
